--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: arv-tool
-    runtime: python
-    buildCommand: ""
-    startCommand: "python main.py"
-    envVars:
-      - key: PORT
-        value: 10000
+    name: arv-estimator
+    env: python
     plan: free
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
+    envVars:
+      - key: ZILLOW_API_KEY
+        sync: false
